<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IPTVy</string>
    <string name="server_hint">Server URL (e.g. http://host:8080)</string>
    <string name="user_hint">Username</string>
    <string name="pass_hint">Password</string>
    <string name="login">Connect</string>
    <string name="live">Live TV</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="logout">Logout</string>
    <string name="search_hint">Search…</string>
    <string name="favorites">★ Favorites</string>
    <string name="added_favorite">Added to favorites</string>
    <string name="removed_favorite">Removed from favorites</string>
    <string name="no_favorites">No favorites yet. Long-press a tile to add.</string>
    <string name="no_results">No results</string>
    <string name="searching">Searching…</string>
    <string name="cast_button">Cast to TV</string>
    <string name="casting">Casting to TV</string>
</resources>
